[project]
name = "pyhaste-fastapi-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard-no-fastapi-cloud-cli]>=0.118.0",
    "pyhaste>=1.1.2",
]

[tool.uv.sources]
pyhaste = { path = "../", editable = true }
